org_unpackaged/unpackaged/objects/Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Any_Change_in_Company_Name_or_Structure__c</fullName>
        <label>Any Change in Company Name or Structure?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Articles_of_Incorporation_DBA__c</fullName>
        <label>Articles of Incorporation/DBA</label>
        <picklist>
            <controllingField>Change_in_Business_Setup__c</controllingField>
            <picklistValues>
                <fullName>On File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not on File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Amount__c</fullName>
        <label>Auto Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_COI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto on COI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Details__c</fullName>
        <label>Auto Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Expiration__c</fullName>
        <label>Auto Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_in_Business_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change in Name or Structure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CrimeFidelity_Amount__c</fullName>
        <label>Crime/Fidelity Bond Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CrimeFidelity_COI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crime/Fidelity Bond on COI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CrimeFidelity_Details__c</fullName>
        <label>Crime/Fidelity Bond Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CrimeFidelity_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crime/Fidelity Bond Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crime_Fidelity_Expiration__c</fullName>
        <label>Crime/Fidelity Bond Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EL_Amount__c</fullName>
        <label>Employer&apos;s Liability Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EL_COI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer&apos;s Liability on COI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EL_Details__c</fullName>
        <label>Employer&apos;s Liability Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EL_Expiration__c</fullName>
        <label>Employer&apos;s Liability Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EL_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer&apos;s Liability Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evidence_of_marketing_to_other_clients__c</fullName>
        <label>Evidence of marketing to other clients</label>
        <picklist>
            <controllingField>Change_in_Business_Setup__c</controllingField>
            <picklistValues>
                <fullName>On File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not on File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evidence_of_work_with_other_clients__c</fullName>
        <label>Evidence of work with other clients</label>
        <picklist>
            <controllingField>Change_in_Business_Setup__c</controllingField>
            <picklistValues>
                <fullName>On File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not on File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExcessUmbrella_Amount__c</fullName>
        <label>Excess/Umbrella Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExcessUmbrella_COI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excess/Umbrella on COI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcessUmbrella_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excess/Umbrella Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excess_Umbrella_Details__c</fullName>
        <label>Excess/Umbrella Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Excess_Umbrella_Expiration__c</fullName>
        <label>Excess/Umbrella Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_COI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Liability on COI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Details__c</fullName>
        <label>Genral Liability Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GL_Expiration__c</fullName>
        <label>General Liability Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Liability Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Liability_Amount__c</fullName>
        <label>General Liability Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Referring_Client__c</fullName>
        <formula>rs_companyContact__r.Referring_Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Referring Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Amount__c</fullName>
        <label>Other Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_COI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other on COI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>Other Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Expiration__c</fullName>
        <label>Other Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLExpiration__c</fullName>
        <label>Professional Liability (E&amp;O) Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PL_Amount__c</fullName>
        <label>Professional Liability (E&amp;O) Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_COI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Liability (E&amp;O) on COI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PL_Details__c</fullName>
        <label>Professional Liability (E&amp;O) Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PL_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Liability (E&amp;O) Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualificaton_Associate_Number__c</fullName>
        <formula>Contact__r.Associate_Number__c</formula>
        <label>Associate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_Completion__c</fullName>
        <label>Time of Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WCAmount__c</fullName>
        <label>Worker&apos;s Comp Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WC_COI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Worker&apos;s Comp on COI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WC_Details__c</fullName>
        <label>Worker&apos;s Comp Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WC_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Worker&apos;s Comp Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_9_Form__c</fullName>
        <label>W-9 Form</label>
        <picklist>
            <controllingField>Change_in_Business_Setup__c</controllingField>
            <picklistValues>
                <fullName>On File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not on File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Comp_Expiration__c</fullName>
        <label>Worker&apos;s Comp Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fb_1099WorkersFile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1099 Worker(s) Qualification on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_1099Workers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1099 Worker(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_independentClassification__c</fullName>
        <label>Behaviorals</label>
        <picklist>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_w2File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-2 Worker(s) Paystub/W-2 on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_w2Worker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-2 Worker(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fd_balanceSheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balance Sheet/491 Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fd_clientDocumentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fd_dbPrintout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D&amp;B Printout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fd_marketingDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fd_sow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fd_stockPerformance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Performance Printout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fd_w9__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fs_1099WorkerNames__c</fullName>
        <label>1099 Worker(s) Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_articlesDBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Articles/DBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fs_companyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_companySize__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_enrollmentManager__c</fullName>
        <formula>rs_companyContact__r.Enrollment_Manager__r.Name</formula>
        <label>Enrollment Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_independentClassificationExplanation__c</fullName>
        <label>Behaviorals Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_marketingURL__c</fullName>
        <label>Marketing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_qualificationResult__c</fullName>
        <label>Qualification Result</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_resultReasons__c</fullName>
        <label>Result Reasons</label>
        <picklist>
            <controllingField>fs_qualificationResult__c</controllingField>
            <picklistValues>
                <fullName>Went Direct With Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walked Away From Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went Exec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elected to go Exec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped Responding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Cancelled Project</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rs_companyContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_qualificationAdvisor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Qualification Advisor</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>workerNames__c</fullName>
        <label>W-2 Worker(s) Names</label>
        <type>TextArea</type>
    </fields>
    <label>Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>rs_qualificationAdvisor__c</columns>
        <columns>fs_companyName__c</columns>
        <columns>rs_companyContact__c</columns>
        <columns>fs_qualificationResult__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Pending_Qualifications</fullName>
        <columns>NAME</columns>
        <columns>rs_qualificationAdvisor__c</columns>
        <columns>fs_companyName__c</columns>
        <columns>rs_companyContact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>fs_qualificationResult__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Pending Qualifications</label>
    </listViews>
    <listViews>
        <fullName>Pending_Qualifications</fullName>
        <columns>NAME</columns>
        <columns>rs_qualificationAdvisor__c</columns>
        <columns>fs_companyName__c</columns>
        <columns>rs_companyContact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fs_qualificationResult__c</field>
            <operation>equals</operation>
        </filters>
        <label>Pending Qualifications</label>
    </listViews>
    <nameField>
        <displayFormat>Qual-{000000}</displayFormat>
        <label>Qualification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <recordTypes>
        <fullName>Annual</fullName>
        <active>true</active>
        <label>Annual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enrollment</fullName>
        <active>true</active>
        <label>Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_SOW</fullName>
        <active>true</active>
        <label>New SOW</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Auto_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Auto_COI__c = TRUE,
    ISBLANK(Auto_Expiration__c)
)</errorConditionFormula>
        <errorDisplayField>Auto_Expiration__c</errorDisplayField>
        <errorMessage>Please set an expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CrimeFidelity_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    CrimeFidelity_COI__c =TRUE,
    ISBLANK(Crime_Fidelity_Expiration__c)
)</errorConditionFormula>
        <errorDisplayField>Crime_Fidelity_Expiration__c</errorDisplayField>
        <errorMessage>Please set an expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EL_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    EL_COI__c =TRUE,
    ISBLANK(EL_Expiration__c)
)</errorConditionFormula>
        <errorDisplayField>EL_Expiration__c</errorDisplayField>
        <errorMessage>Please set an expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExcessUmbrella_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ExcessUmbrella_COI__c =TRUE,
    ISBLANK(Excess_Umbrella_Expiration__c)
)</errorConditionFormula>
        <errorDisplayField>Excess_Umbrella_Expiration__c</errorDisplayField>
        <errorMessage>Please set an expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GL_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    GL_COI__c = TRUE,
    ISBLANK(GL_Expiration__c)
)</errorConditionFormula>
        <errorDisplayField>GL_Expiration__c</errorDisplayField>
        <errorMessage>Please set an expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Other_COI__c = TRUE,
    ISBLANK(Other_Expiration__c)
)</errorConditionFormula>
        <errorDisplayField>Other_Expiration__c</errorDisplayField>
        <errorMessage>Please set an expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PL_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    PL_COI__c =TRUE,
    ISBLANK(PLExpiration__c)
)</errorConditionFormula>
        <errorDisplayField>PLExpiration__c</errorDisplayField>
        <errorMessage>Please set an expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(fs_qualificationResult__c,&quot;FAILED&quot;),
    ISBLANK(fs_resultReasons__c)
)</errorConditionFormula>
        <errorDisplayField>fs_resultReasons__c</errorDisplayField>
        <errorMessage>Please select an available Result Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>W2_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    fb_w2Worker__c = TRUE,
    workerNames__c = NULL
)</errorConditionFormula>
        <errorDisplayField>workerNames__c</errorDisplayField>
        <errorMessage>Please enter the names of the W-2 workers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WC_Expiration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    WC_COI__c = TRUE,
    ISBLANK(Work_Comp_Expiration__c)
)</errorConditionFormula>
        <errorDisplayField>Work_Comp_Expiration__c</errorDisplayField>
        <errorMessage>Please set an expiration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x1099_Names_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    fb_1099Workers__c = TRUE,
    fs_1099WorkerNames__c = NULL
)</errorConditionFormula>
        <errorDisplayField>fs_1099WorkerNames__c</errorDisplayField>
        <errorMessage>Please enter the names of the 1099 workers</errorMessage>
    </validationRules>
</CustomObject>